fix(upvote-button): fixed loading indicator being out of place

--- a/src/app/components/upvote-button/upvote-button.styles.less
+++ b/src/app/components/upvote-button/upvote-button.styles.less
@@ -5,10 +5,13 @@
 
 .btn-bch-upvote-container {
   cursor: pointer;
+  position: relative;
+  width: 130px;
 }
 
 .btn-bch-upvote-container > button {
-  position: relative;
+  position: absolute;
+  left: 0;
   padding: 2px 5px 2px 20px;
   line-height: 20px;
   z-index: 0;
@@ -18,7 +21,7 @@
   min-width: 115px;
   width: 115px;
   max-width: 115px;
-  margin-left: -18px;
+  margin-left: 12px;
   float: left;
   overflow: hidden;
 }
@@ -26,8 +29,8 @@
 .btn-bch-upvote-container > .bch-icon {
   width: 30px;
   height: 30px;
-  float: left;
-  position: relative;
+  left: 1px;
+  position: absolute;
   z-index: 10;
 }
 
@@ -49,7 +52,7 @@
   position: absolute;
   top: 4px;
   left: 0;
-  margin-left: 30px;
+  margin-left: 28px;
   width: 68px;
   padding-left: 4px;
   padding-right: 4px;
@@ -107,10 +110,11 @@
   border-left: 2px solid rgba(0, 0, 0, 0) !important;
   border-right: 2px solid rgba(0, 0, 0, 0) !important;
   border-radius: 50px;
-  width: 34px;
+  width: 30px;
   z-index: 11;
-  height: 34px;
+  height: 30px;
   position: absolute;
+  left: 1px;
   -moz-animation: spinoffPulse 1s infinite linear;
   -webkit-animation: spinoffPulse 1s infinite linear;
   animation: spinoffPulse 1s infinite linear;
